# dotProduct

./: AUTHORS  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt  dotProductBenchmark.cc  dotProductTest.cc
cmake/: compiler_options.cmake  install_options.cmake  options.cmake
src/: CMakeLists.txt  dot_product.cc  dot_product.h
